# traverse

./: .gitignore  CLAUDE.md  README.md  api.py  create-index.py  evaluate.py  pyproject.toml  res.txt  search-old.py  search.py  test_category_detection.py
data/: attributes.index  attributes_list.json  attributes_list_desc.json  fr-improved.json  fr.json  osm_wiki_tags_cleaned.json  osm_wiki_tags_natural_desc.json  poi.index  poi_list.json  poi_list_desc.json  search_cases.json  tags_list.json
data/data_tmp/: attributes_list.json  osm_tags_complete.json  osm_tags_enriched.json  osm_tags_enriched_final.json  osm_tags_final.json  osm_tags_scraped.json  osm_wiki_tags.json  osm_wiki_tags_cleaned.json  poi_list.json  tags_list.json
data_scripts/: auto_enrich.py  enrich_llm_batch.py  enrich_tags.py  enrich_with_llm.py  enrichments_extended.py  fetch_fr_wiki.py  fix_descriptions.py  format_final.py  generate_enriched.py  generate_final_json.py  generate_natural_descriptions.py  reenrich_tags.py  scrape_complete.py  scrape_osm_wiki.py
test/: benchmark.py  evaluate.py  test-only-llm.py  test_data.json
utils/: embedding_search.py  improve_query.py  prepare.py  query_expansion.py  rerank_with_crossencoder.py  sort_with_llm.py
utils/types/: __init__.py
