[project]
name = "osm-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.12.0",
    "autocorrect>=2.6.1",
    "einops>=0.8.2",
    "faiss-cpu>=1.13.2",
    "numpy>=2.3.5",
    "sentence-transformers>=5.2.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers==5.0.0rc2",
]
